Updated dependencies to latest versions, added link removal & updates.

--- a/less/styles.less
+++ b/less/styles.less
@@ -15,30 +15,47 @@
   padding-top: 88px;
 }
 
-.navbar-nav li.login a {
-  color: #27ae60;
+.navbar-nav {
+
+  li.login a {
+    color: #27ae60;
+  }
+
+  li.logout a {
+    color: #c0392b;
+  }
+
 }
 
-.navbar-nav li.logout a {
-  color: #c0392b;
+.link-form {
+
+  .input-group-addon {
+    min-width: 100px;
+  }
+
+  .add {
+    min-width: 100px;
+  }
+
+  .input-group span.glyphicon {
+    margin-right: 10px;
+  }
+
 }
 
-.label {
-  margin-right: 5px;
-}
+.link {
 
-.input-group-addon {
-  min-width: 100px;
-}
+  .tags {
+    min-height: 22px;
+  }
 
-.add {
-  min-width: 100px;
-}
+  .modify {
+    width: 100%;
+    text-align: right;
+  }
 
-.input-group span.glyphicon {
-  margin-right: 10px;
-}
+  .label {
+    margin-right: 5px;
+  }
 
-.tags {
-  min-height: 22px;
 }
