Use cerebellum's new dispatch promises feature for error handling, show errors with react-crouton. Return proper errors from API. Re-enabled optimistic rendering, related cerebellum bug was fixed.

--- a/less/styles.less
+++ b/less/styles.less
@@ -59,3 +59,29 @@
   }
 
 }
+
+.alert {
+  //background: #d62c1a;
+  //color: #fff;
+  .crouton {
+    .error {
+      padding: 1rem;
+      position: relative;
+
+      span {
+        display: block;
+      }
+
+      .buttons {
+        position: absolute;
+        top: 1rem;
+        right: 2rem;
+
+        .close {
+          float: none;
+          font-size: 1.4rem;
+        }
+      }
+    }
+  }
+}
