Use webpack & PostCSS instead of browserify and LESS. 'npm run watch' launches webpack dev server with react hot loader. 'npm run build' creates optimized build with webpack and extracts all CSS to single file.

--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -1,4 +1,4 @@
-@import (inline) "lib/css/bootstrap.min.css";
+@import "../lib/bootstrap.css";
 
 *, *:before, *:after {
   -moz-box-sizing: border-box;
@@ -61,8 +61,6 @@
 }
 
 .alert {
-  //background: #d62c1a;
-  //color: #fff;
   .crouton {
     .error {
       padding: 1rem;
