--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -1,85 +1,3 @@
-@import "../lib/bootstrap.css";
-
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-#app {
+.Layout {
   padding-top: 88px;
-}
-
-.navbar-nav {
-
-  li.login a {
-    color: #27ae60;
-  }
-
-  li.logout a {
-    color: #c0392b;
-  }
-
-}
-
-.link-form {
-
-  .input-group-addon {
-    min-width: 100px;
-  }
-
-  .add {
-    min-width: 100px;
-  }
-
-  .input-group span.glyphicon {
-    margin-right: 10px;
-  }
-
-}
-
-.link {
-
-  .tags {
-    min-height: 22px;
-  }
-
-  .modify {
-    width: 100%;
-    text-align: right;
-  }
-
-  .label {
-    margin-right: 5px;
-  }
-
-}
-
-.alert {
-  .crouton {
-    .error {
-      padding: 1rem;
-      position: relative;
-
-      span {
-        display: block;
-      }
-
-      .buttons {
-        position: absolute;
-        top: 1rem;
-        right: 2rem;
-
-        .close {
-          float: none;
-          font-size: 1.4rem;
-        }
-      }
-    }
-  }
 }
